<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/ll_days_container">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.143"
        android:text="@string/monday"
        android:id="@+id/tv_monday"
        android:gravity="center"
        android:hint="1"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.143"
        android:text="@string/tuesday"
        android:id="@+id/tv_tuesday"
        android:gravity="center"
        android:hint="2"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.143"
        android:text="@string/wednesday"
        android:id="@+id/tv_wednesday"
        android:gravity="center"
        android:hint="3"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.143"
        android:text="@string/thursday"
        android:id="@+id/tv_thursday"
        android:gravity="center"
        android:hint="4"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.143"
        android:text="@string/friday"
        android:id="@+id/tv_friday"
        android:gravity="center"
        android:hint="5"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.143"
        android:text="@string/saturday"
        android:id="@+id/tv_saturday"
        android:gravity="center"
        android:hint="6"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.143"
        android:text="@string/sunday"
        android:id="@+id/tv_sunday"
        android:gravity="center"
        android:hint="7"/>

</LinearLayout>