<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE"
    tools:context=".RelaySettingActivity">

    <include layout="@layout/common_toolbar"
        android:id="@+id/toolbar_container"/>

    <include layout="@layout/item_relay"
        android:id="@+id/list_item_community"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_status_title"
            android:text="@string/edit_relay_title"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/main_text_color"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_status_title"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_button_container"
            android:id="@+id/fl_container_editor">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_1"
                android:layout_gravity="center"
                android:id="@+id/bt_on_off_editable"
                />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_relay_name"
            android:text="@string/edit_relay_name_title"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@+id/fl_container_editor"
            android:textColor="@color/main_text_color"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_relay_name"
            android:layout_below="@+id/tv_relay_name"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/relay_name"/>
        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>

</LinearLayout>